# fpga-runtime-for-opencl

./: .clang-format  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md
.github/: CODEOWNERS
.github/workflows/: asan.yml  bdba.yml  build-linux.yml  build-windows.yml  clang-format.yml  container-prune.yml  container.yml  coverage.yml  coverity-pull-request.yml  coverity.yml  fuzz-test.yml  klocwork-container.yml  klocwork-main.yml  klocwork-pull-request.yml  klocwork.yml  tsan.yml  unix.yml  valgrind.yml
cmake/manifests/linux/: install_manifest.txt  install_manifest_CL.txt  (+7 more)
cmake/modules/: FindElf.cmake
cmake/scripts/: version.cmake
container/centos-8-dev/: Dockerfile
container/debian-11-arm-dev/: Dockerfile
container/opensuse-leap-15-dev/: Dockerfile
container/rockylinux-8-dev/: Dockerfile
container/rockylinux-9-dev/: Dockerfile
container/ubuntu-18.04-dev/: Dockerfile
container/ubuntu-20.04-clang/: Dockerfile
container/ubuntu-20.04-dev/: Dockerfile
container/ubuntu-20.04-klocwork-build-tools/: Dockerfile
container/ubuntu-20.04-klocwork-desktop-tools/: Dockerfile
container/ubuntu-22.04-dev/: Dockerfile
docs/: README.md  buffers.md  eager_progress.md  usm.md
fuzz_testing/: CMakeLists.txt  README.md
fuzz_testing/fuzz_src/: fuzz_testing.h
fuzz_testing/original_inputs/: acl_auto_configure_fuzz_test.yml
fuzz_testing/script/: fuzz_test.py  mutator.py
fuzz_testing/test/: CMakeLists.txt  acl_auto_configure_fuzz_test.cpp  acl_fuzz_test.cpp  acl_fuzz_test.h  acl_globals_fuzz_test.cpp  acl_hal_fuzz_test.cpp  acl_hal_fuzz_test.h
glibc_wrap/: CMakeLists.txt  glibc_wrap.c
include/: acl.h  acl_auto.h  acl_auto_configure.h  acl_auto_configure_version.h  acl_bsp_io.h  acl_command.h  acl_command_queue.h  acl_context.h  acl_device_binary.h  acl_device_op.h  acl_event.h  acl_globals.h  acl_hal.h  acl_hal_mmd.h  acl_hostch.h  acl_icd_dispatch.h  acl_kernel.h  acl_kernel_if.h  acl_mem.h  acl_offline_hal.h  acl_platform.h  acl_pll.h  acl_printf.h  acl_profiler.h  acl_program.h  acl_sampler.h  acl_shared_aligned_ptr.h  acl_shipped_board_cfgs.h  acl_support.h  acl_svm.h  acl_thread.h  acl_types.h  acl_usm.h  acl_util.h  acl_version.h.in  acl_visibility.h
include/CL/: cl_ext.h  cl_ext_intelfpga.h  cl_version.h
include/MMD/: aocl_mmd.h  aocl_mmd_deprecated.h
lib/: CMakeLists.txt
lib/CppUTest/: .clang-format  CMakeLists.txt
lib/CppUTest/include/CppUTest/: CommandLineArguments.h  Failure.h  MemoryLeakAllocator.h  MemoryLeakDetector.h  PlatformSpecificFunctions.h  Synchronization.h  TestHarness.h  TestResult.h  Utest.h  UtestMacros.h  VirtualCall.h
lib/CppUTest/src/: CommandLineArguments.cpp  CommandLineTestRunner.cpp  Failure.cpp  JUnitTestOutput.cpp  MemoryLeakAllocator.cpp  MemoryLeakDetector.cpp  MemoryLeakWarningPlugin.cpp  SimpleString.cpp  TestHarness_c.cpp  TestOutput.cpp  TestPlugin.cpp  TestRegistry.cpp  TestResult.cpp  Utest.cpp  UtestPlatformGcc.cpp  UtestPlatformVisualCpp.cpp
lib/CppUTest/test/: AllTests.cpp  CMakeLists.txt  CommandLineArgumentsTest.cpp  CommandLineTestRunnerTest.cpp  FailureTest.cpp  JUnitOutputTest.cpp  MemoryLeakAllocatorTest.cpp  MemoryLeakDetectorTest.cpp  NullTestTest.cpp  PluginTest.cpp  SetPluginTest.cpp  SimpleStringTest.cpp  TestHarness_cTest.cpp  TestInstallerTest.cpp  TestRegistryTest.cpp  TestResultTest.cpp  UtestTest.cpp
lib/acl_check_sys_cmd/: CMakeLists.txt
lib/acl_check_sys_cmd/include/acl_check_sys_cmd/: acl_check_sys_cmd.h
lib/acl_check_sys_cmd/src/: acl_check_sys_cmd.c
lib/acl_check_sys_cmd/test/: CMakeLists.txt  acl_check_sys_cmd_test.cpp
lib/acl_hash/: CMakeLists.txt
lib/acl_hash/include/acl_hash/: acl_hash.h
lib/acl_hash/src/: acl_hash.c
lib/acl_hash/test/: CMakeLists.txt  acl_hash_test.cpp  acl_test.cpp  acl_test.h
lib/acl_threadsupport/: CMakeLists.txt
lib/acl_threadsupport/include/acl_threadsupport/: acl_threadsupport.h
lib/acl_threadsupport/src/: acl_threadsupport.c
lib/acl_threadsupport/test/: CMakeLists.txt  acl_test.cpp  acl_test.h  acl_threadsupport_test.cpp
lib/pkg_editor/: CMakeLists.txt
lib/pkg_editor/include/pkg_editor/: pkg_editor.h
lib/pkg_editor/src/: pkg_editor.c  zlib.c  zlib_interface.h
lib/pkg_editor/test/: CMakeLists.txt  pkg_editor_test.cpp
scripts/: changelog-link-pr.sh  clang-format.sh  coverage_diff.py  delta_valgrind.sh  install_aocl.ps1  install_aocl.sh  install_libelf.ps1  install_ninja.ps1  install_zlib.ps1  parse_valgrind_suppressions.sh  valgrind_suppression.supp
src/: acl_auto_configure.cpp  acl_bsp_io.cpp  acl_command.cpp  acl_command_queue.cpp  acl_context.cpp  acl_device.cpp  acl_device_binary.cpp  acl_device_op.cpp  acl_device_program_info.cpp  acl_event.cpp  acl_globals.cpp  acl_hal.cpp  acl_hal_mmd.cpp  acl_hostch.cpp  acl_icd_dispatch.cpp  acl_kernel.cpp  acl_kernel_if.cpp  acl_mem.cpp  acl_offline_hal.cpp  acl_platform.cpp  acl_pll.cpp  acl_printf.cpp  acl_profiler.cpp  acl_program.cpp  acl_sampler.cpp  acl_shared_aligned_ptr.cpp  acl_support.cpp  acl_svm.cpp  acl_thread.cpp  acl_usm.cpp  check_copy_overlap.c  check_copy_overlap.h  unref.h
test/: CMakeLists.txt  acl_auto_configure_test.cpp  acl_command_queue_test.cpp  acl_context_test.cpp  acl_device_op_test.cpp  acl_device_op_test.h  acl_device_test.cpp  acl_event_test.cpp  acl_globals_test.cpp  acl_globals_test.h  acl_hal_mmd_test.cpp  acl_hal_test.cpp  acl_hal_test.h  acl_hash_test.cpp  acl_kernel_test.cpp  acl_mem_device_global_test.cpp  acl_mem_test.cpp  acl_platform_test.cpp  acl_profiler_test.cpp  acl_program_test.cpp  acl_sampler_test.cpp  acl_support_test.cpp  acl_svm_test.cpp  acl_test.cpp  acl_test.h  acl_thread_test.cpp  acl_usm_test.cpp
test/board/a10_ref/: README.md  board_env.xml
test/board/a10_ref/hardware/a10_ref_small/: board_spec.xml
test/example_binary/: README.md
test/example_binary/linux/: compile_aocr.sh  example.aocr  foo.aocr
test/example_binary/src/: example.cl  foo.cl
test/example_binary/windows/: compile_aocr.cmd  example.aocr  foo.aocr
test/fake_bsp/: CMakeLists.txt  fakegoodbsp.cpp  missingfuncbsp.cpp
(+9 files in other folders)
